hard-gists/790687/run.log
=== Docker Run Log for 790687 ===
Started at: Mi 29. Okt 17:22:15 CET 2025

[2025-10-29 17:22:15] START: Running container for 790687
[2025-10-29 17:22:15] SUCCESS: Container 9d4ae49281eaa5dcbc7cec4bf457655838f350ca5859434288312861163ff1b1 started for 790687
=== Container logs for 790687 ===
  File "/snippet.py", line 126
    print cmd, self.stat
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 790687 ===
[2025-10-29 17:22:17] INFO: Container 9d4ae49281eaa5dcbc7cec4bf457655838f350ca5859434288312861163ff1b1 has stopped
